--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -1,23 +1,7 @@
 @use 'introduction';
-
-// Google Font
-@import url("https://fonts.googleapis.com/css?family=Inter&display=swap");
-
-$marlowe-purple: #511CF7;
-
-/* You can override the default Infima variables here. */
-:root {
-  --ifm-font-family-base: 'Inter';
-  --ifm-link-color: #511CF7;
-  --ifm-link-hover-color: #511CF7;
-  --ifm-link-hover-decoration: #511CF7;
-
-  --ifm-menu-color-active: #511CF7;
-
-  --ifm-navbar-link-hover-color: #511CF7;
-
-  --ifm-breadcrumb-color-active: #511CF7;
-}
+@use 'colors';
+@use 'fonts';
+@use 'docs';
 
 article {
   margin-left: 3rem;
@@ -56,6 +40,6 @@ article {
   margin-left: 6px;
 
   path {
-    stroke: $marlowe-purple;
+    stroke: var(--color-marlowe-purple);
   }
 }
