--- a/src/components/DocsFooter/styles.module.scss
+++ b/src/components/DocsFooter/styles.module.scss
@@ -1,67 +1,108 @@
-.footer-wrapper {
-  display: flex;
-  margin-top: 3rem;
-  margin-left: 3rem;
-  margin-right: 3rem;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 1rem 0;
-
-  @mixin wrapper__vertical() {
-    flex-direction: column;
-    .logo-wrapper, .copyright-wrapper, .footer-icon-wrapper {
-      padding: 0.5rem 0;
-    }
-  }
-
-  @media (min-width: 997px) and (max-width: 1298px) {
-    @include wrapper__vertical();
-  }
-
-  @media (max-width: 767px) {
-    @include wrapper__vertical();
-  }
-
-  .logo-wrapper {
-    width: 108px;
-    height: 32px;
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-
-  .dark-logo {
-    display: none;
-  }
-  
-  .footer-icon-wrapper {
-    display: flex;
-    align-items: center;
-    .social-icon {
-      margin: 0 12px;
-      opacity: 0.8;
-      &:hover {
-        opacity: 1;
-      }
-      &:first-child {
-        margin-left: 0;
-      }
-      &:last-child {
-        margin-right: 0;
-      }
-    }
+.footerOuter {
+  padding-top: 6.25rem;
+  padding-bottom: 6.25rem;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  @media (max-width: 899px) {
+    padding-bottom: 6.25rem;
+    background-size: 20.1875rem 3.8125rem;
   }
 }
 
-html[data-theme='dark'] {
-  .footer-wrapper {
-    .dark-logo {
-      display: initial;
-    }
-    .light-logo {
-      display: none;
-    }
+.footerLogo {
+  width: 160px;
+  height: 42px;
+}
+
+.footerLogo[data-dark] {
+  display: none;
+}
+
+html[data-theme="dark"] {
+  .footerLogo[data-light] {
+    display: none;
   }
+  .footerLogo[data-dark] {
+    display: initial;
+  }
+}
+
+.inner {
+  padding: 0 1.25rem;
+  margin: auto;
+  border-top: 1px solid var(--ifm-toc-border-color);
+}
+
+.linksAndLogoContainer {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 3rem;
+
+  .footerLogo {
+    margin-bottom: 1.25rem;
+  }
+}
+
+.links {
+  display: flex;
+  gap: 1.25rem;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  @media (max-width: 899px) {
+    flex-direction: column;
+  }
+}
+.footerColumn {
+  margin-left: auto;
+  flex-basis: 30rem;
+}
+.linksList {
+  flex-basis: calc(33.33% - 1.25rem);
+  margin-bottom: 1.25rem;
+}
+.linksHeading {
+  font-weight: 600;
+  font-size: 1rem;
+  line-height: 1.625rem;
+  color: var(--theme-color-purple);
+  margin: 0;
+}
+.linkItem {
+  display: block;
+  font-weight: 600;
+  font-size: 0.875rem;
+  line-height: 1.625rem;
+  color: inherit;
+  text-decoration: none;
+  white-space: nowrap;
+  > a {
+    color: inherit;
+  }
+}
+
+.disclaimer {
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  margin: 1.5625rem 0;
+}
+.copyright {
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  color: var(--theme-color-dark-grey);
+}
+
+.footerIconWrapper {
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 1.25rem;
+  padding: 0 1.25rem;
+  margin-bottom: 2rem;
+  justify-content: end;
+}
+
+.socialIcon > a {
+  display: block;
+  line-height: 0;
 }
