Fix openapi plugin expand toggle with css override

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -43,3 +43,10 @@ article {
     stroke: var(--color-marlowe-purple);
   }
 }
+
+// Hack: Upstream issue - https://github.com/cloud-annotations/docusaurus-openapi/issues/243
+div[class^="collapsedApiSidebar"] {
+  position: absolute;
+  width: inherit;
+  background-color: var(--docusaurus-collapse-button-bg);
+}
